# RealTimeAuth

./: README.md
clients/rta-quic-client/: Cargo.toml
clients/rta-quic-client/src/: main.rs
rta-server/: Cargo.toml  Dockerfile  docker-compose.yml
rta-server/certs/: private_key.pem  public_key.der
rta-server/config/: config.toml
rta-server/src/: config.rs  context.rs  events.rs  main.rs  server.rs  token_exchange_quic.rs
rta-server/src/application/: commands.rs  mod.rs  queries.rs
rta-server/src/domain/: events.rs  mod.rs  token.rs
rta-server/src/infrastructure/: idp_adapter.rs  mod.rs  quic_server.rs  redis_repository.rs
rta-server/src/token/: mod.rs  rta_token.rs  token_trait.rs
