[package]
name = "realtime-auth-idp"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "RealTimeAuth (RTA): A real-time, QUIC-based Identity Provider (IdP) for continuous authorization in AI-driven environments"
license = "MIT"
repository = "https://github.com/yourusername/realtime-auth-idp"
readme = "README.md"
keywords = ["auth", "authorization", "quic", "http3", "real-time", "idp"]
categories = ["authentication", "network-programming", "web-programming"]
exclude = ["tests/", ".github/", "docs/"]

[dependencies]
# QUIC and HTTP/3 libraries
quinn = { version = "0.11", features = ["rustls"] }
h3 = "0.0.4"
rustls = "0.23"
rustls-pemfile = "2.1"

# Async runtime and utilities
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# Configuration management
config = "0.14"

# JWT & token management
jsonwebtoken = "9.3.0"

# Cryptography and Serialization
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Concurrent data structures
dashmap = "5.5"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Redis integration (event-driven notifications)
redis = { version = "0.25", features = ["tokio-comp"] }

# Utility crates
hex = "0.4"
base64 = "0.21"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }


[dev-dependencies]
tokio-test = "0.4"
