[package]
name = "rta-quic-client"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = { version = "0.11", features = ["rustls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
rustls = "0.23"
